--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: clojure
 
 install:
   - wget https://www.foundationdb.org/downloads/5.1.5/ubuntu/installers/foundationdb-clients_5.1.5-1_amd64.deb
-  - sudo dpkg -i foundationdb-clients_5.1.5-1_amd64.deb || true
+  - wget https://www.foundationdb.org/downloads/5.1.5/ubuntu/installers/foundationdb-server_5.1.5-1_amd64.deb
+  - sudo dpkg -i foundationdb-server_5.1.5-1_amd64.deb foundationdb-clients_5.1.5-1_amd64.deb || true
   - wget https://www.foundationdb.org/downloads/5.1.5/bindings/java/fdb-java-5.1.5.jar
   - lein localrepo install maven_repository/fdb-java-5.1.5.jar fdb 5.1.5
 
