--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
   - wget https://www.foundationdb.org/downloads/5.1.5/ubuntu/installers/foundationdb-clients_5.1.5-1_amd64.deb
   - wget https://www.foundationdb.org/downloads/5.1.5/ubuntu/installers/foundationdb-server_5.1.5-1_amd64.deb
   - sudo dpkg -i foundationdb-server_5.1.5-1_amd64.deb foundationdb-clients_5.1.5-1_amd64.deb || true
-  - lein localrepo install maven_repository/fdb-java-5.1.5.jar fdb 5.1.5
+  - mvn install:install-file -Dfile=maven_repository/fdb-java-5.1.7.jar -DgroupId=com.apple.foundationdb -DartifactId=fdb-java -Dversion=5.1.7 -Dpackaging=jar
 
 script:
   - lein test
