Comment GH pages auto deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,11 @@ cache:
   directories:
   - $HOME/.m2
 
-deploy:
-  local-dir: docs
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep-history: true
-  on:
-    branch: master
+# deploy:
+#   local-dir: docs
+#   provider: pages
+#   skip-cleanup: true
+#   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+#   keep-history: true
+#   on:
+#     branch: master
